# WebTgBot

./: README.md  main.py  pyproject.toml  requirements.txt
src/: app.py  config.py  core.py  data_store.py
src/bot/: core.py  handlers.py  keyboard.py
src/routes/: auth.py  chat.py  ws.py
static/css/: style.css
templates/: chat.html  login.html
test/: conftest.py
test/test_bot/: test_handlers.py
test/test_routes/: test_auth.py
